--- a/squid-ink/.env.local
+++ b/squid-ink/.env.local
@@ -6,8 +6,8 @@ DB_PORT=23798
 #DB_USER=root
 PROCESSOR_PROMETHEUS_PORT=3211
 GQL_PORT=4000
-ARCHIVE_ENDPOINT=http://127.0.0.1:8888/graphql
-WS_ENDPOINT=ws://127.0.0.1:9944
+ARCHIVE_ENDPOINT=http://38.242.128.236:8002/graphql
+WS_ENDPOINT=wss://edgeware.jelliedowl.net
 ## Defines in which storage are the balances stored. Can be found in the runtime config of the chain.
 BALANCES_STORE=system
 ## Toggle for contract message and event decoding
