--- a/local-testnet/docker-compose.explorer-ui.yml
+++ b/local-testnet/docker-compose.explorer-ui.yml
@@ -5,8 +5,8 @@ services:
     container_name: explorer-ui
     image: ghcr.io/web3labs/epirus-substrate-ui
     environment:
-      - REACT_APP_SQUID_ENDPOINT=http://localhost:4000/graphql
-      - REACT_APP_SQUID_ARCHIVE_ENDPOINT=http://localhost:4444/graphql
+      - REACT_APP_SQUID_ENDPOINT=http://localhost:5000/graphql
+      - REACT_APP_SQUID_ARCHIVE_ENDPOINT=http://38.242.128.236:8002/graphql
       - REACT_APP_SOURCE_CODE_ENABLED=true
       - REACT_APP_VERIFIER_ENDPOINT=http://127.0.0.1:3001
       - REACT_APP_VERIFIER_WS_ENDPOINT=ws://127.0.0.1:3001
