--- a/local-testnet/docker-compose.squid-ink.yml
+++ b/local-testnet/docker-compose.squid-ink.yml
@@ -9,8 +9,8 @@ x-environment: &envs
   DB_PORT: 5432
   PROCESSOR_PROMETHEUS_PORT: 3000
   GQL_PORT: 4000
-  ARCHIVE_ENDPOINT: http://archive:8000/graphql
-  WS_ENDPOINT: wss://rococo-contracts-rpc.polkadot.io  
+  ARCHIVE_ENDPOINT: http://38.242.128.236:8002/graphql
+  WS_ENDPOINT: wss://edgeware.jelliedowl.net  
   BALANCES_STORE: system
   SOURCE_CODE_ENABLED: "true"
   VERIFIER_ENDPOINT: http://host.docker.internal:3001
