--- a/squid-ink/.env.local
+++ b/squid-ink/.env.local
@@ -1,11 +1,11 @@
 CHAIN=local
 PROCESSOR_NAME=squid-local
-DB_NAME=squid
-DB_PASS=squid
-DB_PORT=23798
-#DB_USER=root
+DB_NAME=squid_ink
+DB_PASS=P4ssw0rd
+DB_PORT=5432
+DB_USER=squid_ink
 PROCESSOR_PROMETHEUS_PORT=3211
-GQL_PORT=4000
+GQL_PORT=5000
 ARCHIVE_ENDPOINT=http://38.242.128.236:8002/graphql
 WS_ENDPOINT=wss://edgeware.jelliedowl.net
 ## Defines in which storage are the balances stored. Can be found in the runtime config of the chain.
@@ -14,3 +14,4 @@ BALANCES_STORE=system
 ## Requires connection to verifier server through VERIFIER_ENDPOINT
 SOURCE_CODE_ENABLED=true
 VERIFIER_ENDPOINT=http://127.0.0.1:3001
+
