Fix chain configs

--- a/squid-ink/.env.local
+++ b/squid-ink/.env.local
@@ -3,7 +3,7 @@ PROCESSOR_NAME=squid-local
 DB_NAME=squid_ink
 DB_PASS=P4ssw0rd
 DB_PORT=5432
-DB_USER=squid_ink
+DB_USER=postgres
 PROCESSOR_PROMETHEUS_PORT=3211
 GQL_PORT=5000
 ARCHIVE_ENDPOINT=http://38.242.128.236:8002/graphql
